--- a/Css/sections/footer.css
+++ b/Css/sections/footer.css
@@ -46,17 +46,12 @@
   cursor: pointer;
 }
 
-.footer__social li {
+ .footer__social-icon{
   width: 42px;
   height: 42px;
-
   background-color: var(--secondary-color);
   border-radius: 100%;
-}
-
-.footer__social li img {
-  width: 45%;
-  height: 45%;
-
-  object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center ;
 }
